--- a/base/pom.xml
+++ b/base/pom.xml
@@ -59,8 +59,28 @@
 			<artifactId>redisson-spring-boot-starter</artifactId>
 			<version>3.14.0</version>
 		</dependency>
-
-
+		
+		<!-- 懒人工具包 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<!-- <version>3.11</version> -->
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<!-- <version>1.15</version> -->
+		</dependency>
 
 		<!-- 三剑客测试系列 -->
 		<dependency>
