--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.chen.jin</groupId>
 	<artifactId>swimming</artifactId>
@@ -25,7 +24,8 @@
 		<module>swimming-alibaba-gateway</module>
         <module>base</module>
         <module>swimming-pachong</module>
-    </modules>
+    <module>nacos-config-demo</module>
+  </modules>
 
 	<dependencyManagement>
 		<dependencies>
