--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,13 @@
 		<module>swimming-pachong</module>
 		<module>nacos-config-demo</module>
 		<module>io-series</module>
-
+		<module>swimming-labs</module>
 	</modules>
 	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
