add eureka，rabbitmq  demo

--- a/swimming-labs/swimming-labs-message/pom.xml
+++ b/swimming-labs/swimming-labs-message/pom.xml
@@ -21,5 +21,6 @@
 
 	<modules>
 		<module>swimming-labs-message-redis</module>
+		<module>swimming-labs-message-rabbitmq</module>
 	</modules>
 </project>
