--- a/swimming-labs/pom.xml
+++ b/swimming-labs/pom.xml
@@ -21,5 +21,6 @@
   	<module>swimming-labs-message</module>
     <module>swimming-labs-jsp</module>
     <module>swimming-labs-engine</module>
+    <module>swimming-labs-eureka</module>
   </modules>
 </project>
