--- a/swimming-labs/swimming-labs-message/pom.xml
+++ b/swimming-labs/swimming-labs-message/pom.xml
@@ -22,5 +22,7 @@
 	<modules>
 		<module>swimming-labs-message-redis</module>
 		<module>swimming-labs-message-rabbitmq</module>
+		<module>swimming-labs-message-jedis</module>
+		<module>swimming-labs-message-lettuce</module>
 	</modules>
 </project>
