--- a/swimming-data/swimming-data-redis/src/main/resources/application.properties
+++ b/swimming-data/swimming-data-redis/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port= 8083
 
 spring.redis.client-name=test
-spring.redis.host=r-uf655dfe721f5b04.redis.rds.aliyuncs.com
-spring.redis.password=Jowoiot2018
+spring.redis.host=
+spring.redis.password=
 spring.redis.database=0
 spring.redis.port=6379
 
