--- a/base/pom.xml
+++ b/base/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>commons-codec</artifactId>
 			<!-- <version>1.15</version> -->
 		</dependency>
+<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+<dependency>
+    <groupId>com.alibaba</groupId>
+    <artifactId>fastjson</artifactId>
+    <version>1.2.78</version>
+</dependency>
 
 		<!-- 三剑客测试系列 -->
 		<dependency>
