--- a/swimming-data/swimming-data-redis/src/main/resources/application.properties
+++ b/swimming-data/swimming-data-redis/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port= 8083
 
 spring.redis.client-name=test
-spring.redis.host=
+spring.redis.host=localhost
 spring.redis.password=
 spring.redis.database=0
 spring.redis.port=6379
@@ -14,6 +14,7 @@ spring.redis.lettuce.pool.max-wait=600
 spring.redis.lettuce.pool.min-idle=1
 spring.redis.lettuce.pool.time-between-eviction-runs=1ms
 
-
+spring.redis.lettuce.cluster.refresh.adaptive=true
+spring.redis.lettuce.cluster.refresh.period=500ms
 
 logging.file.path=/logs/redis-publish
