--- a/base/pom.xml
+++ b/base/pom.xml
@@ -87,6 +87,12 @@
     <artifactId>fastjson</artifactId>
     <version>1.2.78</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+<dependency>
+    <groupId>com.jayway.jsonpath</groupId>
+    <artifactId>json-path</artifactId>
+    <version>2.6.0</version>
+</dependency>
 
 		<!-- 三剑客测试系列 -->
 		<dependency>
