--- a/swimming-data/swimming-data-excel/pom.xml
+++ b/swimming-data/swimming-data-excel/pom.xml
@@ -17,6 +17,17 @@
 			<version>2.2.10</version>
 		</dependency>
 
+<dependency>
+    <groupId>org.openjdk.jmh</groupId>
+    <artifactId>jmh-core</artifactId>
+    <version>1.27</version>
+</dependency>
+<dependency>
+    <groupId>org.openjdk.jmh</groupId>
+    <artifactId>jmh-generator-annprocess</artifactId>
+    <version>1.27</version>
+</dependency>
+
 
 	</dependencies>
 
