--- a/swimming-labs/swimming-labs-message/swimming-labs-message-rabbitmq/pom.xml
+++ b/swimming-labs/swimming-labs-message/swimming-labs-message-rabbitmq/pom.xml
@@ -10,6 +10,11 @@
 	<artifactId>swimming-labs-message-rabbitmq</artifactId>
 	<groupId>org.swimming.labs.rabbitmq</groupId>
 
+
+	<properties>
+	<swagger.version>2.6.1</swagger.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -26,6 +31,27 @@
 			<!-- <version>3.12.0</version> -->
 		</dependency>
 
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>4.0.11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.6.0</version>
+		</dependency>
 	</dependencies>
 
 
